--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link"  href="#gellary">gellary</a>
                       </li>   
                       <li class="nav-item">
-                        <a class="nav-link"  href="#">news</a>
+                        <a class="nav-link"  href="#news">news</a>
                       </li>   
                       <li class="nav-item">
                         <a class="nav-link"  href="#team">team</a>
@@ -360,7 +360,7 @@
     <!-- gellary section end -->
 
     <!-- news section start -->
-    <section class="news">
+    <section class="news" id="news">
       <div class="transparent">
         <div class="container">
           <div class="row">
